--- a/galerie.html
+++ b/galerie.html
@@ -14,7 +14,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Accueil</a></li>
-          <li><a href="entreprise.html">Entreprise</a></li>
+          <li><a href="#">Entreprise</a></li>
           <li><a href="#" class="selected">Galerie</a></li>
           <li><a href="#">Me contacter</a></li>
         </ul>
@@ -54,8 +54,9 @@
           <h5>Link</h5>
           <ul>
             <li><a href="index.html">Accueil</a></li>
-            <li><a href="entreprise.html">Entreprise</a></li>
-            <li><a href="#">Galerie</a></li>
+            <li><a href="entreprise/presentation.html">Presentation</a></li>
+            <li><a href="entreprise/interview.html">Interview</a></li>
+            <li><a href="#" class="selected">Galerie</a></li>
             <li><a href="#">Me contacter</a></li>
           </ul>
         </section>
