--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
           <ul>
             <a href="#"><li>Accueil</li></a>
-            <a href="entreprise.html"><li>Entreprise</li></a>
+            <a href="#"><li>Entreprise</li></a>
             <a href="galerie.html"><li>Galerie</li></a>
             <a href="#"><li>Me contacter</li></a>
           </ul>
@@ -473,8 +473,9 @@
         <section id="link">
           <h5>Link</h5>
           <ul>
-            <li><a href="index.html">Accueil</a></li>
-            <li><a href="#">Entreprise</a></li>
+            <li><a href="index.html" class="selected">Accueil</a></li>
+            <li><a href="entreprise/presentation.html">Presentation</a></li>
+            <li><a href="entreprise/interview.html">Interview</a></li>
             <li><a href="galerie.html">Galerie</a></li>
             <li><a href="#">Me contacter</a></li>
           </ul>
@@ -497,7 +498,7 @@
     <script src="scripts/index/clouds.js"></script>
     <script src="scripts/index/slideArrow.js"></script>
     <script>
-      activateClouds(22);
+      activateClouds(22, "images/clouds/cloud");
     </script>
   </body>
 </html>
