--- a/entreprise/interview.html
+++ b/entreprise/interview.html
@@ -14,7 +14,13 @@
       <nav>
         <ul>
           <li><a href="../index.html">Accueil</a></li>
-          <li><a href="#" class="selected">Entreprise</a></li>
+          <li id="entreprise">
+            <a href="#" class="selected">Entreprise</a>
+            <ul id="menuEntreprise">
+              <li><a href="presentation.html">Présentation</a></li>
+              <li><a href="#" class="selected">Interview</a></li>
+            </ul>
+          </li>
           <li><a href="../galerie.html">Galerie</a></li>
           <li><a href="#">Me contacter</a></li>
         </ul>
@@ -45,7 +51,7 @@
                 </a>
               </div>
               <div>
-                <a href="#">
+                <a href="https://www.linkedin.com/in/victor-petit-a372a213b/" target="_blank">
                   <img src="../images/socials/linkedin.svg" alt="" />
                 </a>
               </div>
@@ -592,9 +598,6 @@
           </section>
         </article>
       </div>
-      <!--
-      https://www.linkedin.com/in/victor-petit-a372a213b/
-      -->
     </main>
 
     <footer>
@@ -610,7 +613,7 @@
           <h5>Link</h5>
           <ul>
             <li><a href="../index.html">Accueil</a></li>
-            <li><a href="presentation.html">Presentation</a></li>
+            <li><a href="presentation.html">Présentation</a></li>
             <li><a href="#" class="selected">Interview</a></li>
             <li><a href="../galerie.html">Galerie</a></li>
             <li><a href="#">Me contacter</a></li>
