--- a/galerie.html
+++ b/galerie.html
@@ -14,7 +14,13 @@
       <nav>
         <ul>
           <li><a href="index.html">Accueil</a></li>
-          <li><a href="#">Entreprise</a></li>
+          <li id="entreprise">
+            <a href="#">Entreprise</a>
+            <ul id="menuEntreprise">
+              <li><a href="entreprise/presentation.html">Présentation</a></li>
+              <li><a href="entreprise/interview.html">Interview</a></li>
+            </ul>
+          </li>
           <li><a href="#" class="selected">Galerie</a></li>
           <li><a href="#">Me contacter</a></li>
         </ul>
