--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
         <nav>
           <ul>
             <a href="#"><li>Accueil</li></a>
-            <a href="#"><li>Entreprise</li></a>
-            <a href="galerie.html"><li>Galerie</li></a>
             <a href="#"><li>Me contacter</li></a>
+            <a href="galerie.html"><li>Galerie</li></a>
+            <li id="entreprise">
+              <a href="#">Entreprise</a>
+              <ul id="menuEntreprise">
+                <li><a href="entreprise/presentation.html">Présentation</a></li>
+                <li><a href="entreprise/interview.html">Interview</a></li>
+              </ul>
+            </li>
           </ul>
         </nav>
       </section>
