Rename Presentation by Rapport and center arrow index

--- a/entreprise/rapport.html
+++ b/entreprise/rapport.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/presentation.css" />
+    <link rel="stylesheet" href="../css/rapport.css" />
     <link rel="icon" type="image/x-icon" href="../images/logo.png" />
     <title>PrefoWeb</title>
   </head>
@@ -16,7 +16,7 @@
           <li id="entreprise">
             <a href="#" class="selected">Entreprise</a>
             <ul id="menuEntreprise">
-              <li><a href="#" class="selected">Présentation</a></li>
+              <li><a href="#" class="selected">Rapport</a></li>
               <li><a href="interview.html">Interview</a></li>
             </ul>
           </li>
@@ -44,7 +44,7 @@
           <h5>Link</h5>
           <ul>
             <li><a href="../index.html">Accueil</a></li>
-            <li><a href="#" class="selected">Presentation</a></li>
+            <li><a href="#" class="selected">Rapport</a></li>
             <li><a href="interview.html">Interview</a></li>
             <li><a href="../galerie.html">Galerie</a></li>
             <li><a href="#">Me contacter</a></li>
