--- a/galerie.html
+++ b/galerie.html
@@ -17,7 +17,7 @@
           <li id="entreprise">
             <a href="#">Entreprise</a>
             <ul id="menuEntreprise">
-              <li><a href="entreprise/presentation.html">Présentation</a></li>
+              <li><a href="entreprise/rapport.html">Rapport</a></li>
               <li><a href="entreprise/interview.html">Interview</a></li>
             </ul>
           </li>
@@ -60,7 +60,7 @@
           <h5>Link</h5>
           <ul>
             <li><a href="index.html">Accueil</a></li>
-            <li><a href="entreprise/presentation.html">Presentation</a></li>
+            <li><a href="entreprise/rapport.html">Rapport</a></li>
             <li><a href="entreprise/interview.html">Interview</a></li>
             <li><a href="#" class="selected">Galerie</a></li>
             <li><a href="#">Me contacter</a></li>
