--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li id="entreprise">
               <a href="#">Entreprise</a>
               <ul id="menuEntreprise">
-                <li><a href="entreprise/presentation.html">Présentation</a></li>
+                <li><a href="entreprise/rapport.html">Rapport</a></li>
                 <li><a href="entreprise/interview.html">Interview</a></li>
               </ul>
             </li>
@@ -480,7 +480,7 @@
           <h5>Link</h5>
           <ul>
             <li><a href="index.html" class="selected">Accueil</a></li>
-            <li><a href="entreprise/presentation.html">Presentation</a></li>
+            <li><a href="entreprise/rapport.html">Rapport</a></li>
             <li><a href="entreprise/interview.html">Interview</a></li>
             <li><a href="galerie.html">Galerie</a></li>
             <li><a href="#">Me contacter</a></li>
