--- a/entreprise/interview.html
+++ b/entreprise/interview.html
@@ -17,7 +17,7 @@
           <li id="entreprise">
             <a href="#" class="selected">Entreprise</a>
             <ul id="menuEntreprise">
-              <li><a href="presentation.html">Présentation</a></li>
+              <li><a href="rapport.html">Rapport</a></li>
               <li><a href="#" class="selected">Interview</a></li>
             </ul>
           </li>
@@ -613,7 +613,7 @@
           <h5>Link</h5>
           <ul>
             <li><a href="../index.html">Accueil</a></li>
-            <li><a href="presentation.html">Présentation</a></li>
+            <li><a href="rapport.html">Rapport</a></li>
             <li><a href="#" class="selected">Interview</a></li>
             <li><a href="../galerie.html">Galerie</a></li>
             <li><a href="#">Me contacter</a></li>
