--- a/galerie.html
+++ b/galerie.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/base/main.css" />
+    <link rel="stylesheet" href="css/base/footer.css" />
     <link rel="stylesheet" href="css/galerie.css" />
     <link rel="icon" type="image/x-icon" href="images/logo.png" />
     <title>PrefoWeb</title>
