--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/content.css" />
+    <link rel="stylesheet" href="css/base/main.css" />
+    <link rel="stylesheet" href="css/base/content.css" />
+    <link rel="stylesheet" href="css/base/footer.css" />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="icon" type="image/x-icon" href="images/logo.png" />
     <title>PrefoWeb</title>
