--- a/entreprise/rapport.html
+++ b/entreprise/rapport.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/base/main.css" />
+    <link rel="stylesheet" href="../css/base/footer.css" />
     <link rel="stylesheet" href="../css/rapport.css" />
     <link rel="stylesheet" href="../css/organigramme.css" />
     <link rel="icon" type="image/x-icon" href="../images/logo.png" />
