Correction texte + revue design rapport

--- a/entreprise/interview.html
+++ b/entreprise/interview.html
@@ -65,15 +65,15 @@
           <section id="presentation">
             <h2>Présentation :</h2>
             <p>
-              Victor Petit jeune auto entrepreneur de 25 ans habite à Périgueux.
+              Victor Petit jeune auto-entrepreneur de 25 ans habite à Périgueux.
               <br />
               Possédant 5 ans d’expériences à son actif dans le domaine du
               développement web/mobile.
               <br />
-              Pendant 2 an et demie il travailla à Bisness et Décision et par la
-              suite pris son indépendance. L’épidémie du Covid a été l’élément
-              déclencheur de son départ en freelance avec l’aide d’un ami qui
-              l’a soutenue dans cette démarche.
+              Pendant 2 ans et demi il travailla à Business et Décision et par
+              la suite pris son indépendance. L’épidémie du Covid a été
+              l’élément déclencheur de son départ en freelance avec l’aide d’un
+              ami qui l’a soutenu dans cette démarche.
             </p>
           </section>
         </article>
