--- a/entreprise/rapport.html
+++ b/entreprise/rapport.html
@@ -30,7 +30,7 @@
     </header>
     <main>
       <div id="content">
-        <h1>BISNESS & DÉCISION</h1>
+        <h1>BUSINESS & DÉCISION</h1>
         <article id="demarche">
           <img src="../images/rapport/demarche.jpeg" alt="" />
           <p>
@@ -129,6 +129,7 @@
         </p>
       </section>
     </footer>
+    <script src="../scripts/entreprise/scrollEffect.js"></script>
     <script src="../scripts/index/clouds.js"></script>
     <script>
       activateClouds(30, "../images/clouds/cloud");
