--- a/entreprise/interview.html
+++ b/entreprise/interview.html
@@ -408,7 +408,7 @@
             </div>
           </section>
           <section class="showingDiv">
-            <h2>C'est beau que tu as tout appris par toi même !</h2>
+            <h2>C'est beau que tu aies tout appris par toi-même !</h2>
             <div>
               <p>
                 Oui, après c’est quand même une grande force. Car une fois que
