Ajout arrow showingdiv

--- a/entreprise/interview.html
+++ b/entreprise/interview.html
@@ -63,7 +63,12 @@
             </div>
           </section>
           <section id="presentation">
-            <h2>Présentation :</h2>
+            <h2>
+              Présentation :
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
+            </h2>
             <p>
               Victor Petit jeune auto-entrepreneur de 25 ans habite à Périgueux.
               <br />
@@ -79,7 +84,12 @@
         </article>
         <article id="interview">
           <section class="showingDiv">
-            <h2>Comment trouves-tu tes clients ?</h2>
+            <h2>
+              Comment trouves-tu tes clients ?
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
+            </h2>
             <div>
               <p>
                 Au début forcément tu utilises des plateformes comme Malt pour
@@ -97,7 +107,12 @@
             </div>
           </section>
           <section class="showingDiv">
-            <h2>Pourquoi t’être lancé dans le développement web ?</h2>
+            <h2>
+              Pourquoi t’être lancé dans le développement web ?
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
+            </h2>
             <div>
               <p>
                 J’ai commencé à écrire mes premières lignes de code lorsque
@@ -123,7 +138,12 @@
             </div>
           </section>
           <section class="showingDiv">
-            <h2>Est-ce que les diplômes sont nécessaire ?</h2>
+            <h2>
+              Est-ce que les diplômes sont nécessaire ?
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
+            </h2>
             <div>
               <p>
                 J’ai réussi à trouver une formation engageante auprès de Pôle
@@ -149,6 +169,10 @@
             <h2>
               L’entreprise était donc obligée de te prendre une fois la période
               de stage terminé ?
+
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
             </h2>
             <div>
               <p>
@@ -168,7 +192,12 @@
             </div>
           </section>
           <section class="showingDiv">
-            <h2>Le site était en PHP pur ou bien avec un framework ?</h2>
+            <h2>
+              Le site était en PHP pur ou bien avec un framework ?
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
+            </h2>
             <div>
               <p>
                 Alors là c’était vraiment un vieux projet historique et je pense
@@ -191,6 +220,10 @@
             <h2>
               Tu as dû te sentir bizarre de te retrouver avec des gens pleins
               d’expériences ?
+
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
             </h2>
             <div>
               <p>
@@ -210,7 +243,12 @@
             </div>
           </section>
           <section class="showingDiv">
-            <h2>Un junior a t-il accès a la BDD/Code source ?</h2>
+            <h2>
+              Un junior a t-il accès a la BDD/Code source ?
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
+            </h2>
             <div>
               <p>
                 Non, ils ne te laissent pas l’accès à la base de données prod.
@@ -221,7 +259,12 @@
             </div>
           </section>
           <section class="showingDiv">
-            <h2>En freelance, dois-tu tout gérer seul ?</h2>
+            <h2>
+              En freelance, dois-tu tout gérer seul ?
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
+            </h2>
             <div>
               <p>
                 Alors ça dépend les missions. Il y a des missions où toute la
@@ -236,7 +279,12 @@
             </div>
           </section>
           <section class="showingDiv">
-            <h2>Que fais-tu en majorité ?</h2>
+            <h2>
+              Que fais-tu en majorité ?
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
+            </h2>
             <div>
               <p>
                 Je ne sais pas trop, il n’y a pas de domaine où je travaille
@@ -260,7 +308,12 @@
             </div>
           </section>
           <section class="showingDiv">
-            <h2>Le travail de freelance est orienté équipe ?</h2>
+            <h2>
+              Le travail de freelance est orienté équipe ?
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
+            </h2>
             <div>
               <p>
                 Ça dépend parce que là le projet Flutter 3 fois par semaine je
@@ -273,7 +326,12 @@
             </div>
           </section>
           <section class="showingDiv">
-            <h2>Quel était l'organigramme de l'entreprise ?</h2>
+            <h2>
+              Quel était l'organigramme de l'entreprise ?
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
+            </h2>
             <div>
               <p>
                 Je travaillais dans le nord de la France sur Amiens, Amiens
@@ -302,7 +360,12 @@
             </div>
           </section>
           <section class="showingDiv">
-            <h2>Toi tu étais que dans le Pôle PHP ?</h2>
+            <h2>
+              Toi tu étais que dans le Pôle PHP ?
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
+            </h2>
             <div>
               <p>
                 Je suis resté environ 1 an maximum dans celui du “PHP” et
@@ -321,7 +384,12 @@
             </div>
           </section>
           <section class="showingDiv">
-            <h2>Les entreprises c’est bien pour débuter ?</h2>
+            <h2>
+              Les entreprises c’est bien pour débuter ?
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
+            </h2>
             <div>
               <p>
                 Bien sûr, ça m’a permis de me professionnaliser mais le seul
@@ -335,7 +403,12 @@
             </div>
           </section>
           <section class="showingDiv">
-            <h2>Pourquoi as-tu quitté l'entreprise ? A cause des technos ?</h2>
+            <h2>
+              Pourquoi as-tu quitté l'entreprise ? A cause des technos ?
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
+            </h2>
             <div>
               <p>
                 Les technos m’importent peu... Je voulais surtout choisir les
@@ -352,6 +425,10 @@
             <h2>
               L’entreprise pouvait-elle te faire travailler plus en dehors des
               heures de travail ?
+
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
             </h2>
             <div>
               <p>
@@ -366,6 +443,10 @@
             <h2>
               Si tu devais donner une critique concernant l’Entreprise où tu
               travaillais ?
+
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
             </h2>
             <div>
               <p>
@@ -396,7 +477,12 @@
             </div>
           </section>
           <section class="showingDiv">
-            <h2>Qu’en est-il au niveau du salaire pour les juniors ?</h2>
+            <h2>
+              Qu’en est-il au niveau du salaire pour les juniors ?
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
+            </h2>
             <div>
               <p>
                 Le problème c’est que ça dépend beaucoup du territoire. Le
@@ -408,7 +494,12 @@
             </div>
           </section>
           <section class="showingDiv">
-            <h2>C'est beau que tu aies tout appris par toi-même !</h2>
+            <h2>
+              C'est beau que tu aies tout appris par toi-même !
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
+            </h2>
             <div>
               <p>
                 Oui, après c’est quand même une grande force. Car une fois que
@@ -424,7 +515,12 @@
             </div>
           </section>
           <section class="showingDiv">
-            <h2>Y-a-t-il beaucoup de “dev” qui ne sont pas autodidacte ?</h2>
+            <h2>
+              Y-a-t-il beaucoup de “dev” qui ne sont pas autodidacte ?
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
+            </h2>
             <div>
               <p>
                 Non mais il y en a beaucoup qui n’aiment pas ce qu’ils font. Ils
@@ -437,6 +533,10 @@
             <h2>
               Le salaire étant plus aventageux ailleurs, pourquoi être resté en
               France ?
+
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
             </h2>
             <div>
               <p>
@@ -457,7 +557,12 @@
             </div>
           </section>
           <section class="showingDiv">
-            <h2>Est-ce que le télétravail est courant ?</h2>
+            <h2>
+              Est-ce que le télétravail est courant ?
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
+            </h2>
             <div>
               <p>
                 Depuis le covid je suis quasiment 100% en télétravail. C’est
@@ -475,7 +580,12 @@
             </div>
           </section>
           <section class="showingDiv">
-            <h2>Est-ce important d’être sociable ?</h2>
+            <h2>
+              Est-ce important d’être sociable ?
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
+            </h2>
             <div>
               <p>
                 Je pense que pour être freelance il faut être sociable car il
@@ -486,7 +596,12 @@
             </div>
           </section>
           <section class="showingDiv">
-            <h2>Aurais-tu des conseils à me donner ?</h2>
+            <h2>
+              Aurais-tu des conseils à me donner ?
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
+            </h2>
             <div>
               <p>
                 Premier conseil, continue à apprendre constamment.
@@ -507,7 +622,12 @@
             </div>
           </section>
           <section class="showingDiv">
-            <h2>Comment me différencier dans une entreprise ?</h2>
+            <h2>
+              Comment me différencier dans une entreprise ?
+              <div class="arrow">
+                <img src="../images/index/arrow_left_div.svg" alt="" />
+              </div>
+            </h2>
             <div>
               <p>
                 Je ne connais pas ton niveau ni le marché en Belgique donc je ne
