--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <h1>Preformation</h1>
       </div>
       <div id="arrowIndiquation">
-        <img src="images/arrow_left.svg" alt="" />
-        <img src="images/arrow_left.svg" alt="" />
-        <img src="images/arrow_left.svg" alt="" />
+        <img src="images/index/arrow_left_header.svg" alt="" />
+        <img src="images/index/arrow_left_header.svg" alt="" />
+        <img src="images/index/arrow_left_header.svg" alt="" />
       </div>
       <video id="flag" src="videos/flag_belgium.mp4" loop muted></video>
     </header>
@@ -59,7 +59,12 @@
           <img src="images/fries.png" alt="" />
         </section>
         <section class="showingDiv">
-          <h2>Qui suis-je ?</h2>
+          <h2>
+            Qui suis-je ?
+            <div class="arrow">
+              <img src="images/index/arrow_left_div.svg" alt="" />
+            </div>
+          </h2>
           <div>
             <p>
               Bien le bonjour/bonsoir à toutes et à tous. Je m'appelle Kevin, un
@@ -103,7 +108,12 @@
           </div>
         </section>
         <section class="showingDiv">
-          <h2>Quelle est l'objectif de ce site ?</h2>
+          <h2>
+            Quelle est l'objectif de ce site ?
+            <div class="arrow">
+              <img src="images/index/arrow_left_div.svg" alt="" />
+            </div>
+          </h2>
           <div>
             <p>
               Tout d'abord cela m'a été demandé par ma formation proposée par
@@ -124,7 +134,12 @@
           </div>
         </section>
         <section class="showingDiv">
-          <h2>Commençons donc par le commencement !</h2>
+          <h2>
+            Commençons donc par le commencement !
+            <div class="arrow">
+              <img src="images/index/arrow_left_div.svg" alt="" />
+            </div>
+          </h2>
           <div>
             <p>
               Au commencement, Dieu créa les cieux et la terre... OUPS ! Pas si
@@ -150,7 +165,12 @@
           </div>
         </section>
         <section class="showingDiv">
-          <h2>L'informatique et la technologie du 20ème siècle :</h2>
+          <h2>
+            L'informatique et la technologie du 20ème siècle :
+            <div class="arrow">
+              <img src="images/index/arrow_left_div.svg" alt="" />
+            </div>
+          </h2>
           <div>
             <p>
               AH l'époque ! Le bon temps comme diraient nos grands-parents...
@@ -180,7 +200,12 @@
           </div>
         </section>
         <section class="showingDiv">
-          <h2>Le progrès de celle-ci :</h2>
+          <h2>
+            Le progrès de celle-ci :
+            <div class="arrow">
+              <img src="images/index/arrow_left_div.svg" alt="" />
+            </div>
+          </h2>
           <div>
             <p>
               Plus le temps passe et plus tout s'accélère. La concurrence se
@@ -221,7 +246,12 @@
           </div>
         </section>
         <section class="showingDiv">
-          <h2>La décadence de l'humanité :</h2>
+          <h2>
+            La décadence de l'humanité :
+            <div class="arrow">
+              <img src="images/index/arrow_left_div.svg" alt="" />
+            </div>
+          </h2>
           <div>
             <p>
               Les gens étaient tellement enthousiastes avec toutes ces nouvelles
@@ -277,7 +307,12 @@
           </div>
         </section>
         <section class="showingDiv">
-          <h2>Où va-t-on ?</h2>
+          <h2>
+            Où va-t-on ?
+            <div class="arrow">
+              <img src="images/index/arrow_left_div.svg" alt="" />
+            </div>
+          </h2>
           <div>
             <p>
               Si nous continuons ainsi, nous pouvons être sûrs que nous courons
@@ -305,7 +340,12 @@
           </div>
         </section>
         <section class="showingDiv">
-          <h2>Fruit du hasard ?</h2>
+          <h2>
+            Fruit du hasard ?
+            <div class="arrow">
+              <img src="images/index/arrow_left_div.svg" alt="" />
+            </div>
+          </h2>
           <div>
             <p>
               Entrons dans le vif du sujet...
@@ -354,7 +394,12 @@
           </div>
         </section>
         <section class="showingDiv">
-          <h2>La solution ?</h2>
+          <h2>
+            La solution ?
+            <div class="arrow">
+              <img src="images/index/arrow_left_div.svg" alt="" />
+            </div>
+          </h2>
           <div>
             <p>
               Nous le voyons tous aujourd’hui. Les guerres, les famines, les
