--- a/entreprise/rapport.html
+++ b/entreprise/rapport.html
@@ -24,7 +24,9 @@
             </ul>
           </li>
           <li><a href="../galerie.html">Galerie</a></li>
-          <li><a href="#">Me contacter</a></li>
+          <li>
+            <a href="mailto:preformation-kevin@hotmail.com">Me contacter</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -116,7 +118,9 @@
             <li><a href="#" class="selected">Rapport</a></li>
             <li><a href="interview.html">Interview</a></li>
             <li><a href="../galerie.html">Galerie</a></li>
-            <li><a href="#">Me contacter</a></li>
+            <li>
+              <a href="mailto:preformation-kevin@hotmail.com">Me contacter</a>
+            </li>
           </ul>
         </section>
       </article>
