--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <nav>
           <ul>
             <a href="#"><li>Accueil</li></a>
-            <a href="#"><li>Me contacter</li></a>
+            <a href="mailto:preformation-kevin@hotmail.com"
+              ><li>Me contacter</li></a
+            >
             <a href="galerie.html"><li>Galerie</li></a>
             <li id="entreprise">
               <a href="#">Entreprise</a>
@@ -446,7 +448,9 @@
             <li><a href="entreprise/rapport.html">Rapport</a></li>
             <li><a href="entreprise/interview.html">Interview</a></li>
             <li><a href="galerie.html">Galerie</a></li>
-            <li><a href="#">Me contacter</a></li>
+            <li>
+              <a href="mailto:preformation-kevin@hotmail.com">Me contacter</a>
+            </li>
           </ul>
         </section>
       </article>
