--- a/galerie.html
+++ b/galerie.html
@@ -23,7 +23,9 @@
             </ul>
           </li>
           <li><a href="#" class="selected">Galerie</a></li>
-          <li><a href="#">Me contacter</a></li>
+          <li>
+            <a href="mailto:preformation-kevin@hotmail.com">Me contacter</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -64,7 +66,9 @@
             <li><a href="entreprise/rapport.html">Rapport</a></li>
             <li><a href="entreprise/interview.html">Interview</a></li>
             <li><a href="#" class="selected">Galerie</a></li>
-            <li><a href="#">Me contacter</a></li>
+            <li>
+              <a href="mailto:preformation-kevin@hotmail.com">Me contacter</a>
+            </li>
           </ul>
         </section>
       </article>
