--- a/entreprise/interview.html
+++ b/entreprise/interview.html
@@ -542,17 +542,17 @@
             </h2>
             <div>
               <p>
-                C’est une bonne question. Parce que mon objectif ce n’est pas de
-                gagner le plus d’argent possible, ça n’a jamais été et ça ne le
-                sera jamais. <br />Beaucoup de gens partent de France pour aller
-                dans un pays pour déclarer moins d’impôts. Ce qui n’est pas tout
-                le temps le cas car certains veulent juste voyager. <br />Mais
-                moi je travaille par la passion mais surtout apporter quelque
-                chose pour la société et la société que je connais le plus c’est
-                la France. C’est vraiment à elle que je veux apporter des choses
-                actuellement. <br />Si je vais dans un pays où je ne connais
-                rien ni même la culture ou bien l’histoire, est-ce que j’aurais
-                vraiment envie d’innover ou bien d’apporter ma pierre à
+                C’est une bonne question. <br />Parce que mon objectif ce n’est
+                pas de gagner le plus d’argent possible, ça n’a jamais été et ça
+                ne le sera jamais. <br />Beaucoup de gens partent de France pour
+                aller dans un pays pour déclarer moins d’impôts. Ce qui n’est
+                pas tout le temps le cas car certains veulent juste voyager.
+                <br />Mais moi je travaille par la passion mais surtout apporter
+                quelque chose pour la société et la société que je connais le
+                plus c’est la France. C’est vraiment à elle que je veux apporter
+                des choses actuellement. <br />Si je vais dans un pays où je ne
+                connais rien ni même la culture ou bien l’histoire, est-ce que
+                j’aurais vraiment envie d’innover ou bien d’apporter ma pierre à
                 l’édifice ? <br />Je ne sais pas en tout cas j’aurais moins
                 cette « niaque-là ».
               </p>
