remove arrow presentation interview

--- a/entreprise/interview.html
+++ b/entreprise/interview.html
@@ -65,12 +65,7 @@
             </div>
           </section>
           <section id="presentation">
-            <h2>
-              Présentation :
-              <div class="arrow">
-                <img src="../images/index/arrow_left_div.svg" alt="" />
-              </div>
-            </h2>
+            <h2>Présentation :</h2>
             <p>
               Victor Petit jeune auto-entrepreneur de 25 ans habite à Périgueux.
               <br />
